grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: alb
    # Shared ALB Group
    alb.ingress.kubernetes.io/group.name: monitoring
    # Internet Facing ALB
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Use Pod IPs as Targets
    alb.ingress.kubernetes.io/target-type: ip
    # HTTPS Listener
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    # Redirect HTTP -> HTTPS
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    # ACM Certificate
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-north-1:188776114860:certificate/d99003fb-1027-48bf-8af6-5004baf57a95
    # Health Check Configuration
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
    alb.ingress.kubernetes.io/healthcheck-port: "3000"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/success-codes: "200"

spec:
  ingressClassName: alb
  rules:
    - host: grafana.tulaja.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
